--- a/sass/_profile.scss
+++ b/sass/_profile.scss
@@ -188,6 +188,10 @@ $profile-width: 50vw;
 
     &.disabled {
       background-color: #B4B4B4;
+
+      &:hover {
+        background-color: #B4B4B4;
+      }
     }
   }
 }
@@ -267,7 +271,7 @@ $height-hover: 160px;
     font-size: 8pt;
 
     &:hover {
-      background-color: #A10505;
+      background-color: #D00606;
       color: #444;
     }
   }
