--- a/sass/_lightbox.scss
+++ b/sass/_lightbox.scss
@@ -42,7 +42,7 @@
   transform: none;
   margin: 10px auto;
   @media screen and (min-width: 1400px) {
-    margin: 150px auto 0 auto;
+    margin: 50px auto 40px auto;
   }
   width: 800px;
   min-height: 460px;
