More express work

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= "BandJam"
+    title= title
     link(rel="stylesheet", href="/css/main.css")
   body
     block content
